test/bad/functions/return2.px

func f() String def
    return
